kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openemis
  labels:
    app.kubernetes.io/name: openemis
    app.kubernetes.io/part-of: openemis
